--- a/index.html
+++ b/index.html
@@ -2,14 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>Marc Wanjeru | IT Systems Specialist</title>
+<title>Marc Wanjeru | IT Systems & Web Specialist</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-<!-- ICONS -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-
 <style>
-/* RESET */
+/* GLOBAL */
 *{margin:0;padding:0;box-sizing:border-box}
 html{scroll-behavior:smooth}
 body{
@@ -19,382 +15,393 @@ body{
   line-height:1.6
 }
 a{color:#00bcd4;text-decoration:none}
-img{max-width:100%}
+a:hover{color:#00e5ff}
+
+/* LOGO */
+.logo{
+  height:42px;
+  background:#fff;
+  padding:6px 10px;
+  border-radius:8px;
+  object-fit:contain; /* Ensures logo scales properly */
+}
 
 /* NAV */
 nav{
-  position:fixed;
-  top:0;
-  width:100%;
-  z-index:1000;
-  background:rgba(11,15,20,.95);
-  padding:15px 30px;
   display:flex;
   justify-content:space-between;
-  align-items:center
+  align-items:center;
+  padding:20px 60px;
+  position:fixed;
+  width:100%;
+  background:rgba(11,15,20,.9);
+  backdrop-filter: blur(10px); /* Modern glass effect */
+  z-index:1000;
+  transition: background 0.3s;
 }
-.logo{
-  height:40px;
-  background:#fff;
-  padding:6px 10px;
-  border-radius:8px
-}
-nav ul{
-  list-style:none;
-  display:flex;
-  gap:20px
-}
-.menu-toggle{
-  display:none;
-  font-size:26px;
-  cursor:pointer
-}
+nav ul{display:flex;gap:25px;list-style:none}
+nav ul a{padding:8px 0; transition: color 0.3s}
+nav ul a:hover{color:#fff; border-bottom:2px solid #00bcd4}
 
 /* HERO */
 header{
   height:100vh;
   background:
     linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7)),
-    url("desktop.jpg") center/cover no-repeat;
+    url("desktop.jpg") center/cover no-repeat; /* Fixed: "desktop.jpgg" → "desktop.jpg" */
   display:flex;
   align-items:center;
-  padding:0 40px
+  padding:0 60px;
 }
-.hero-text{
-  animation:slideIn 1.2s ease forwards
-}
+.hero-text{animation:slideIn 1.2s ease forwards; max-width: 700px;}
 @keyframes slideIn{
   from{opacity:0;transform:translateX(-40px)}
   to{opacity:1;transform:translateX(0)}
 }
-.hero-text h1{font-size:52px}
+.hero-text h1{font-size:60px; margin-bottom:10px;}
 .hero-text span{color:#00bcd4}
-.hero-text p{font-size:20px;margin:15px 0}
+.hero-text p{margin:15px 0 30px;font-size:20px}
 .btn{
   display:inline-block;
   padding:12px 30px;
-  border:1px solid #00bcd4;
+  border:2px solid #00bcd4; /* Thicker border for better visibility */
   border-radius:30px;
-  transition:.3s
+  margin-right:15px;
+  transition:.3s;
+  font-weight:600;
 }
-.btn:hover{background:#00bcd4;color:#000}
+.btn:hover{background:#00bcd4;color:#000; transform:scale(1.05);}
 
 /* SECTIONS */
-section{
-  padding:100px 40px;
-  max-width:1200px;
-  margin:auto
-}
-h2{
-  font-size:34px;
-  margin-bottom:30px;
-  color:#00bcd4
-}
+section{padding:100px 60px;max-width:1200px;margin:auto}
+h2{font-size:36px;margin-bottom:40px;color:#00bcd4; text-align:center;}
 
 /* FADE */
-.fade{
-  opacity:0;
-  transform:translateY(30px);
-  transition:.8s
-}
-.fade.show{
-  opacity:1;
-  transform:none
-}
+.fade{opacity:0;transform:translateY(30px);transition:all .8s ease}
+.fade.show{opacity:1;transform:none}
 
 /* ABOUT */
 .about{
   display:grid;
   grid-template-columns:1fr 1fr;
-  gap:40px;
-  align-items:center
+  gap:60px;
+  align-items:center;
+}
+.about img{
+  width:100%;
+  border-radius:12px;
+  box-shadow:0 10px 30px rgba(0,0,0,.5);
 }
 
-/* TIMELINE */
-.timeline{
-  border-left:2px solid #00bcd4;
-  padding-left:30px
+/* JOURNEY */
+.timeline-journey{
+  max-width:900px;
+  margin:40px auto 0;
+  border-left:3px solid #00bcd4;
+  padding-left:40px;
+  position:relative;
 }
 .timeline-item{
-  margin-bottom:30px;
-  position:relative
+  margin-bottom:40px;
+  position:relative;
 }
 .timeline-item::before{
   content:"";
   position:absolute;
-  left:-41px;
-  top:6px;
-  width:14px;
-  height:14px;
+  left:-46px;
+  top:8px;
+  width:16px;
+  height:16px;
   background:#00bcd4;
-  border-radius:50%
+  border-radius:50%;
+  box-shadow:0 0 0 4px rgba(0,188,212,.2);
 }
 
-/* SLIDERS */
-.slider-wrapper{
-  position:relative;
-}
-.slider{
+/* SLIDER BASE (TECH + PROJECTS) */
+.slider-wrapper{position:relative;margin-top:40px;overflow:hidden;}
+.slider-grid{
   display:flex;
-  gap:20px;
+  gap:40px;
   overflow-x:auto;
   scroll-behavior:smooth;
-  padding-bottom:10px
+  padding:20px 0;
+  scrollbar-width:none; /* Firefox */
 }
-.slider::-webkit-scrollbar{display:none}
-.card{
-  min-width:260px;
-  background:#121821;
-  padding:20px;
-  border-radius:12px;
-  flex-shrink:0
-}
-.card h3{color:#00bcd4;margin-bottom:10px}
+.slider-grid::-webkit-scrollbar{display:none}
 
-/* SLIDER ARROWS */
-.slider-btn{
+/* ARROWS */
+.slider-arrow{
   position:absolute;
   top:50%;
   transform:translateY(-50%);
-  width:40px;
-  height:40px;
+  background:rgba(0,188,212,.2);
+  border:2px solid #00bcd4;
+  color:#00bcd4;
+  font-size:28px;
+  width:50px;
+  height:50px;
   border-radius:50%;
-  background:#00bcd4;
-  color:#000;
-  border:none;
   cursor:pointer;
-  z-index:10
+  z-index:10;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  transition:.3s;
 }
-.slider-btn.left{left:-15px}
-.slider-btn.right{right:-15px}
+.slider-arrow:hover{background:#00bcd4;color:#000}
+.slider-arrow.left{left:10px}
+.slider-arrow.right{right:10px}
 
 /* TECHNOLOGIES */
 .tech{
-  min-width:120px;
-  text-align:center
+  min-width:130px;
+  text-align:center;
+  flex-shrink:0;
+  padding:15px;
+  border-radius:12px;
+  background:#121720;
+  transition:.3s;
 }
-.tech img{height:48px;margin-bottom:8px}
+.tech:hover{transform:translateY(-8px); box-shadow:0 10px 20px rgba(0,188,212,.2)}
+.tech img{height:60px; object-fit:contain;}
+.tech p{margin-top:12px;font-size:15px;color:#ccc}
+
+/* PROJECTS */
+.project-card{
+  min-width:300px;
+  background:#121720;
+  border-radius:12px;
+  padding:25px;
+  flex-shrink:0;
+  transition:.3s;
+  box-shadow:0 5px 15px rgba(0,0,0,.3);
+}
+.project-card:hover{transform:translateY(-10px); box-shadow:0 15px 30px rgba(0,188,212,.2)}
+.project-card h3{margin-bottom:12px;color:#00bcd4}
+.project-card p{font-size:15px;opacity:.9}
+
+/* STORIES */
+.stories{
+  max-width:900px;
+  margin:auto;
+}
+.story{
+  background:#121720;
+  padding:30px;
+  border-radius:12px;
+  margin-bottom:30px;
+  box-shadow:0 5px 15px rgba(0,0,0,.3);
+  transition:.3s;
+}
+.story:hover{transform:translateX(10px)}
+.story h3{margin-bottom:12px;color:#00bcd4}
+.story p{font-size:16px;opacity:.9}
 
 /* CONTACT */
-form{
-  display:grid;
-  gap:15px;
-  max-width:500px
-}
-input,textarea{
-  padding:12px;
-  border-radius:8px;
-  border:none;
-  background:#1a1f27;
-  color:#fff
-}
-button.submit{
-  background:#00bcd4;
-  border:none;
-  padding:12px;
-  border-radius:25px;
-  cursor:pointer
-}
+#contact p{font-size:18px; margin:15px 0;}
 
-/* FLOATING FAB */
-.fab{
+/* FOOTER */
+footer{text-align:center;padding:40px;background:#070a0f; font-size:14px;}
+footer a{color:#00bcd4; margin:0 10px;}
+
+/* WHATSAPP FLOAT */
+.whatsapp-float{
   position:fixed;
   bottom:25px;
   right:25px;
-  z-index:2000
-}
-.fab-main{
-  width:55px;
-  height:55px;
+  background:#25D366;
+  color:#fff;
+  width:60px;
+  height:60px;
   border-radius:50%;
-  background:#00bcd4;
   display:flex;
   align-items:center;
   justify-content:center;
-  font-size:22px;
-  cursor:pointer
+  font-size:30px;
+  z-index:999;
+  box-shadow:0 4px 15px rgba(0,0,0,.4);
+  transition:.3s;
 }
-.fab-menu{
-  display:none;
-  flex-direction:column;
-  gap:15px;
-  margin-bottom:15px;
-  align-items:center
-}
-.fab-menu a{
-  width:45px;
-  height:45px;
-  border-radius:50%;
-  background:#121821;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  color:#00bcd4;
-  font-size:20px
-}
-
-/* FOOTER */
-footer{
-  text-align:center;
-  padding:30px;
-  background:#070a0f
-}
+.whatsapp-float:hover{transform:scale(1.1); opacity:.9}
 
 /* RESPONSIVE */
 @media(max-width:900px){
-  .about{grid-template-columns:1fr}
-  header{padding:0 20px}
-  nav ul{
-    position:absolute;
-    top:70px;
-    right:30px;
-    background:#0b0f14;
-    flex-direction:column;
-    padding:20px;
-    display:none
-  }
-  nav ul.show{display:flex}
-  .menu-toggle{display:block}
-  .hero-text h1{font-size:40px}
+  nav{padding:20px 30px; flex-direction:column; gap:15px;}
+  nav ul{gap:15px; flex-wrap:wrap; justify-content:center;}
+  header{padding:0 30px}
+  .hero-text h1{font-size:42px}
+  .hero-text p{font-size:18px}
+  .about{grid-template-columns:1fr; text-align:center;}
+  .about img{max-width:300px; margin:auto;}
+  section{padding:80px 30px;}
+  h2{font-size:32px}
+  .slider-arrow{width:40px;height:40px;font-size:24px}
+}
+@media(max-width:600px){
+  .hero-text h1{font-size:36px}
+  .btn{padding:10px 24px; font-size:14px;}
 }
 </style>
 </head>
-
 <body>
 
 <!-- NAV -->
 <nav>
-<img src="logo.png" class="logo" alt="Logo">
-<i class="fas fa-bars menu-toggle" onclick="toggleMenu()"></i>
-<ul id="navMenu">
-<li><a href="#home">Home</a></li>
-<li><a href="#about">About</a></li>
-<li><a href="#journey">Journey</a></li>
-<li><a href="#projects">Projects</a></li>
-<li><a href="#certs">Certifications</a></li>
-<li><a href="#technologies">Technologies</a></li>
-<li><a href="#contact">Contact</a></li>
-</ul>
+  <img src="logo.png" class="logo" alt="Marc Wanjeru Logo">
+  <ul>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#journey">Journey</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#stories">Stories</a></li>
+    <li><a href="#technologies">Technologies</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
 </nav>
 
 <!-- HERO -->
 <header id="home">
-<div class="hero-text">
-<h1>Marc <span>Wanjeru</span></h1>
-<p>IT Systems & Web Specialist</p>
-<a class="btn" href="#projects">My Work</a>
-</div>
+  <div class="hero-text">
+    <h1>Marc <span>Wanjeru</span></h1>
+    <p>IT Systems & Web Specialist</p>
+    <a href="path-to-your-cv.pdf" class="btn" download>Download CV</a>
+    <a href="#contact" class="btn" style="background:#00bcd4; color:#000;">Get in Touch</a>
+  </div>
 </header>
 
 <!-- ABOUT -->
 <section id="about" class="fade">
-<h2>About Me</h2>
-<div class="about">
-<p>
-IT Systems Specialist with experience in enterprise IT support,
-networking, cybersecurity, and Microsoft 365 administration.
-</p>
-<img src="profile.jpg" alt="Profile">
-</div>
+  <h2>About Me</h2>
+  <div class="about">
+    <p>
+      IT Systems Specialist with experience in enterprise IT support, networking,
+      cybersecurity, and infrastructure operations. Passionate about building secure, 
+      efficient systems that empower organizations and teams.
+    </p>
+    <img src="profile.jpg" alt="Marc Wanjeru - Professional Portrait"> <!-- Fixed placeholder -->
+  </div>
 </section>
 
 <!-- JOURNEY -->
 <section id="journey" class="fade">
-<h2>Professional Journey</h2>
-<div class="timeline">
-<div class="timeline-item"><h3>Foundations</h3><p>Hands-on IT support & troubleshooting.</p></div>
-<div class="timeline-item"><h3>Enterprise Growth</h3><p>NGO & logistics environments.</p></div>
-<div class="timeline-item"><h3>Systems & Security</h3><p>Infrastructure, networking, cybersecurity.</p></div>
-</div>
+  <h2>Professional Journey</h2>
+  <div class="timeline-journey">
+    <div class="timeline-item"><h3>Foundations</h3><p>Hands-on IT support and troubleshooting in dynamic environments.</p></div>
+    <div class="timeline-item"><h3>Enterprise Growth</h3><p>Supporting NGO and logistics infrastructure at scale.</p></div>
+    <div class="timeline-item"><h3>Systems & Security</h3><p>Advanced infrastructure, networking, and cybersecurity implementations.</p></div>
+  </div>
 </section>
 
 <!-- PROJECTS -->
 <section id="projects" class="fade">
-<h2>Projects</h2>
-<div class="slider-wrapper">
-<button class="slider-btn left" onclick="slide('projects',-1)">‹</button>
-<div class="slider" id="projects-slider">
-<div class="card"><h3>IT Infrastructure Upgrade</h3><p>LAN, Wi-Fi & endpoint security.</p></div>
-<div class="card"><h3>Endpoint Security</h3><p>Kaspersky enterprise deployment.</p></div>
-<div class="card"><h3>Web Systems</h3><p>Internal tools & automation.</p></div>
-</div>
-<button class="slider-btn right" onclick="slide('projects',1)">›</button>
-</div>
+  <h2>Projects</h2>
+  <div class="slider-wrapper">
+    <button class="slider-arrow left" onclick="scrollSlider('projectsGrid',-1)">‹</button>
+    <button class="slider-arrow right" onclick="scrollSlider('projectsGrid',1)">›</button>
+    <div class="slider-grid" id="projectsGrid">
+      <div class="project-card">
+        <h3>IT Infrastructure Upgrade</h3>
+        <p>Designed and deployed LAN, wireless networks, and endpoint security for mid-sized organizations.</p>
+      </div>
+      <div class="project-card">
+        <h3>Endpoint Security Deployment</h3>
+        <p>Implemented Kaspersky Security Center for enterprise-wide endpoint protection and compliance.</p>
+      </div>
+      <div class="project-card">
+        <h3>Digital Logistics System</h3>
+        <p>Built internal systems to streamline logistics, procurement, and operational workflows.</p>
+      </div>
+      <div class="project-card">
+        <h3>Microsoft 365 Administration</h3>
+        <p>Managed users, permissions, collaboration tools, and migration projects.</p>
+      </div>
+    </div>
+  </div>
 </section>
 
-<!-- CERTIFICATIONS -->
-<section id="certs" class="fade">
-<h2>Certifications</h2>
-<div class="slider-wrapper">
-<button class="slider-btn left" onclick="slide('certs',-1)">‹</button>
-<div class="slider" id="certs-slider">
-<div class="card"><h3>CompTIA A+</h3></div>
-<div class="card"><h3>Network Fundamentals</h3></div>
-<div class="card"><h3>Cybersecurity Awareness</h3></div>
-</div>
-<button class="slider-btn right" onclick="slide('certs',1)">›</button>
-</div>
+<!-- STORIES -->
+<section id="stories" class="fade">
+  <h2>Stories & Experiences</h2>
+  <div class="stories">
+    <div class="story">
+      <h3>Working in High-Impact Environments</h3>
+      <p>
+        Supporting NGO operations taught me how critical system uptime and security
+        are when technology directly supports humanitarian work.
+      </p>
+    </div>
+    <div class="story">
+      <h3>Learning Through Challenges</h3>
+      <p>
+        From network failures to security incidents, each challenge strengthened my
+        problem-solving and decision-making under pressure.
+      </p>
+    </div>
+    <div class="story">
+      <h3>Growth Beyond Technical Skills</h3>
+      <p>
+        Collaborating with diverse teams improved my communication, documentation,
+        and leadership abilities.
+      </p>
+    </div>
+  </div>
 </section>
 
 <!-- TECHNOLOGIES -->
 <section id="technologies" class="fade">
-<h2>Technologies</h2>
-<div class="slider" id="tech-slider">
-<div class="card tech"><img src="cisco.png"><p>Cisco</p></div>
-<div class="card tech"><img src="windows.png"><p>Windows</p></div>
-<div class="card tech"><img src="linux.png"><p>Linux</p></div>
-<div class="card tech"><img src="microsoft.png"><p>Microsoft 365</p></div>
-<div class="card tech"><img src="jira.png"><p>Jira</p></div>
-</div>
+  <h2>Technologies & Platforms</h2>
+  <div class="slider-wrapper">
+    <button class="slider-arrow left" onclick="scrollSlider('techGrid',-1)">‹</button>
+    <button class="slider-arrow right" onclick="scrollSlider('techGrid',1)">›</button>
+    <div class="slider-grid" id="techGrid">
+      <a class="tech" href="https://www.cisco.com" target="_blank"><img src="cisco.png" alt="Cisco"><p>Cisco</p></a>
+      <a class="tech" href="https://www.microsoft.com/en-us/windows" target="_blank"><img src="windows.png" alt="Windows"><p>Windows</p></a>
+      <a class="tech" href="https://ubuntu.com" target="_blank"><img src="linux.png" alt="Linux"><p>Linux</p></a>
+      <a class="tech" href="https://www.microsoft.com/microsoft-365" target="_blank"><img src="microsoft365.png" alt="Microsoft 365"><p>Microsoft 365</p></a>
+      <a class="tech" href="https://www.kaspersky.com" target="_blank"><img src="kaspersky.png" alt="Kaspersky"><p>Kaspersky</p></a>
+      <a class="tech" href="https://www.atlassian.com/software/jira" target="_blank"><img src="jira.png" alt="Jira"><p>Jira</p></a>
+    </div>
+  </div>
 </section>
 
 <!-- CONTACT -->
 <section id="contact" class="fade">
-<h2>Contact</h2>
-<form>
-<input placeholder="Name" required>
-<input type="email" placeholder="Email" required>
-<textarea rows="5" placeholder="Message"></textarea>
-<button class="submit">Send</button>
-</form>
+  <h2>Contact</h2>
+  <p>Email: <a href="mailto:wanjerumarc@icloud.com">wanjerumarc@icloud.com</a></p>
+  <p>Phone: <a href="tel:+256769593704">+256 769 593 704</a></p>
+  <p>Location: Johannesburg, South Africa</p>
 </section>
 
-<footer>© 2026 Marc Wanjeru</footer>
+<!-- FOOTER -->
+<footer>
+  <p>© 2026 Marc Wanjeru. All rights reserved.</p>
+  <p>
+    <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a> • 
+    <a href="https://github.com/your-username" target="_blank">GitHub</a>
+  </p>
+</footer>
 
-<!-- FLOATING CONTACT -->
-<div class="fab">
-<div class="fab-menu" id="fabMenu">
-<a href="https://wa.me/256769593704" target="_blank"><i class="fab fa-whatsapp"></i></a>
-<a href="mailto:wanjerumarc@icloud.com"><i class="fas fa-envelope"></i></a>
-<a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-</div>
-<div class="fab-main" onclick="toggleFab()"><i class="fas fa-plus"></i></div>
-</div>
+<!-- WHATSAPP FLOAT -->
+<a class="whatsapp-float" href="https://wa.me/256769593704?text=Hi%20Marc%2C%20I'd%20like%20to%20connect!" target="_blank" aria-label="Chat on WhatsApp">💬</a>
 
+<!-- SCRIPTS -->
 <script>
-/* MENU */
-function toggleMenu(){
-  document.getElementById("navMenu").classList.toggle("show")
-}
+const faders = document.querySelectorAll('.fade');
+const observer = new IntersectionObserver(entries => {
+  entries.forEach(entry => {
+    if (entry.isIntersecting) {
+      entry.target.classList.add('show');
+    }
+  });
+}, { threshold: 0.1 });
 
-/* SLIDER */
-function slide(id,dir){
-  document.getElementById(id+"-slider").scrollLeft+=dir*280
-}
+faders.forEach(fade => observer.observe(fade));
 
-/* FAB */
-function toggleFab(){
-  const m=document.getElementById("fabMenu")
-  m.style.display=m.style.display==="flex"?"none":"flex"
+function scrollSlider(id, direction) {
+  const slider = document.getElementById(id);
+  const scrollAmount = 320; // Matches card width + gap
+  slider.scrollLeft += direction * scrollAmount;
 }
-
-/* FADE */
-const faders=document.querySelectorAll(".fade")
-const obs=new IntersectionObserver(e=>{
-  e.forEach(x=>x.isIntersecting&&x.target.classList.add("show"))
-},{threshold:.2})
-faders.forEach(f=>obs.observe(f))
 </script>
-
 </body>
 </html>
