Update favicon links and contact location
Updated favicon links and changed location in contact section.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <meta charset="UTF-8" />
 <title>Marc Wanjeru | IT Systems & Web Specialist</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!-- FAVICON ADDED -->
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="favicon.png">
 <style>
 /* ===== ROOT VARIABLES FOR LIGHT/DARK MODE ===== */
 :root {
@@ -194,7 +198,7 @@ h2{
   box-shadow:0 10px 30px var(--shadow);
 }
 
-/* PROFESSIONAL JOURNEY - NEW GRID WITH HOVER EXPAND */
+/* PROFESSIONAL JOURNEY - GRID WITH HOVER EXPAND */
 .journey-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -208,13 +212,13 @@ h2{
   box-shadow: 0 5px 15px var(--shadow);
   transition: all 0.4s ease;
   cursor: pointer;
-  height: 220px; /* Fixed height when collapsed */
+  height: 220px;
   position: relative;
 }
 .journey-card:hover {
   transform: translateY(-10px);
   box-shadow: 0 20px 40px rgba(0,188,212,.3);
-  height: auto; /* Expand on hover */
+  height: auto;
   z-index: 5;
 }
 .journey-card img {
@@ -247,7 +251,7 @@ h2{
 }
 .journey-card:hover .details {
   opacity: 1;
-  max-height: 300px; /* Enough for content */
+  max-height: 300px;
   padding-top: 15px;
 }
 .journey-card .details ul {
@@ -485,7 +489,7 @@ footer a{
   </div>
 </section>
 
-<!-- JOURNEY - NEW GRID VERSION -->
+<!-- JOURNEY - GRID VERSION -->
 <section id="journey" class="fade">
   <h2>Professional Journey</h2>
   <div class="journey-grid">
@@ -619,7 +623,7 @@ footer a{
   <h2>Contact</h2>
   <p>Email: <a href="mailto:wanjerumarc@icloud.com">wanjerumarc@icloud.com</a></p>
   <p>Phone: <a href="tel:+256769593704">+256 769 593 704</a></p>
-  <p>Location: KAMPALA, UGANDA</p>
+  <p>Location: Johannesburg, South Africa</p>
 </section>
 
 <!-- FOOTER -->
